- previous entry spacing fix

--- a/Counter/styles.css
+++ b/Counter/styles.css
@@ -29,7 +29,7 @@ body {
 h2 {
     margin-bottom: 20px;
     border: 1px solid #2c2c2c;
-    border-radius: 10px;
+    border-radius: 20px;
     padding: 10px;
     width: 300px;
     margin: 0 auto 20px;
